prevent embed chat scrolling overlap, update styling

--- a/angularjs-customer/assets/css/style.css
+++ b/angularjs-customer/assets/css/style.css
@@ -78,5 +78,10 @@ body {
 }
 
 .tb-chat-frame form {
+    padding: .3rem .3rem .2rem 0;
+}
+
+.tb-chat-frame form .input-group input {
+    border-color: transparent;
     padding: .5rem;
 }
